# learning-python

./: README.md  requirements.txt
.github/workflows/: workflow-for-homework10.yml
homework_01/: main.py
homework_02/: base.py  car.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_06/: docker-compose.yml  pyproject.toml
homework_06/app/: config.py  main.py
homework_06/app/migrations/versions/: 2023_12_17_1335-560d56a89dc5_initial_migration.py
homework_06/app/models/: __init__.py  database.py  post.py  user.py
homework_06/app/templates/: base.html  index.html
homework_06/app/templates/posts/: create.html  details.html  index.html
homework_06/app/templates/users/: create.html  details.html  index.html
homework_06/app/views/: crud.py  posts.py  users.py
homework_06/docker-build/: Dockerfile
homework_07/: README.md
homework_07/blog/: models.py  urls.py  views.py
homework_07/settings/: urls.py
homework_07/templates/: index.html
homework_08/: README.md
homework_08/blog/: urls.py  views.py
homework_08/templates/: base.html
homework_09/blog/: admin.py  forms.py  views.py
homework_09/blog/tests/: tests_views.py
homework_10/.github/workflows/: python-tests.yml
homework_10/blog/migrations/: 0001_initial.py
homework_10/blog/tests/: tests_models.py
homework_10/settings/: settings.py
homework_10/templates/: index.html
testing/test_homework_03/: test_app.py
(+6 files in other folders)
